# SomatoMind

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-pages.yml
brain/: __init__.py
brain/action/: __init__.py
brain/cognition/: __init__.py
brain/cognition/attention/: __init__.py
brain/cognition/creativity/: __init__.py
brain/cognition/planning/: __init__.py
brain/cognition/reasoning/: __init__.py
brain/cognition/reflection/: __init__.py
brain/cognition/spatial/: __init__.py
brain/core/: brain.py
brain/memory/: __init__.py
brain/perception/: __init__.py
brain/plasticity/: __init__.py
docs/: architecture.excalidraw  architecture.md  gridworld_viewer.html  index.html  overview.md
docs/assets/: style.css
docs/experiments/: e1_reflection.html  e4_perceptual_rep.html  rooms.html
env/: gridworld.py
experiments/e1_reflection/: README.md  run.py  visualize.py
experiments/e2_architecture/: run.py
experiments/e3_self_evolve/: run.py
experiments/e4_perceptual_rep/: README.md
results/: e1_reflection_20260525_212645.json  e1_reflection_20260525_212716.json  e1_reflection_20260525_212802.json  e1_reflection_20260525_221219.json
